Crash with 'File Output' when exporting the 'Combined' output from this specific EXR image #115983

Closed
opened 2023-12-09 18:50:46 +01:00 by Rodrigo-Ribeiro · 2 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.98

Blender Version
Broken: version: 4.0.1, branch: blender-v4.0-release, commit date: 2023-11-16 16:40, hash: d0dd92834a08
Worked: (newest version of Blender that worked as expected)

Short description of error
Blender crashing when I try to output a file sequence from compositor. I've loaded an AGX EXR with multiple AOVs/passes. I've made a node setup to mix a few of the rendered AOVs and then when I try to output the result to a PNG sequence it crashes after rendering the first frame. Eitherdoing "render image" or "render animation" the crash happens. The only workaround here was to hit "render image" for every frame manually. It crashes on my macbook M2 max and also my PC (the specs above) and even with newer versions (4.0.2 and 4.1 alpha)

Exact steps for others to reproduce the error

  • Download and open simplified.blend
  • Render Animation (to trigger the File Output)

Original Steps:

Here's the .blend file + the source EXR used in my composition:

https://www.dropbox.com/scl/fi/li94n21o9f3lyc41ujxba/Lek_NATAL_2023_ASSINATURA_exportRENDER_V01.blend?rlkey=uvv8emv4f9y955tej16hgtz7h&dl=0

https://www.dropbox.com/scl/fo/3gbwl7o1toac2pvsp9fba/h?rlkey=1sot4m9q3qzu5gd5bmvgr4609&dl=0

Thank you!

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.98 **Blender Version** Broken: version: 4.0.1, branch: blender-v4.0-release, commit date: 2023-11-16 16:40, hash: `d0dd92834a08` Worked: (newest version of Blender that worked as expected) **Short description of error** Blender crashing when I try to output a file sequence from compositor. I've loaded an AGX EXR with multiple AOVs/passes. I've made a node setup to mix a few of the rendered AOVs and then when I try to output the result to a PNG sequence it crashes after rendering the first frame. Eitherdoing "render image" or "render animation" the crash happens. The only workaround here was to hit "render image" for every frame manually. It crashes on my macbook M2 max and also my PC (the specs above) and even with newer versions (4.0.2 and 4.1 alpha) **Exact steps for others to reproduce the error** - Download and open [simplified.blend](attachments/eeba105b-5671-442d-86c4-eca997c4217c) - Render Animation (to trigger the File Output) ## Original Steps: Here's the .blend file + the source EXR used in my composition: https://www.dropbox.com/scl/fi/li94n21o9f3lyc41ujxba/Lek_NATAL_2023_ASSINATURA_exportRENDER_V01.blend?rlkey=uvv8emv4f9y955tej16hgtz7h&dl=0 https://www.dropbox.com/scl/fo/3gbwl7o1toac2pvsp9fba/h?rlkey=1sot4m9q3qzu5gd5bmvgr4609&dl=0 Thank you!
Rodrigo-Ribeiro added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-12-09 18:50:47 +01:00

Thank you for your report, @Rodrigo-Ribeiro.
I was able to replicate the crash using the file you provided. But it seems that the crash can occur with single image too.
I simplified the file and encountered the crash as well.

Before we can confirm and forward the report to the developers, we need update the description to reflect this additional information (As the current description may be misleading).

Thank you for your report, @Rodrigo-Ribeiro. I was able to replicate the crash using the file you provided. But it seems that the crash can occur with single image too. I simplified the file and encountered the crash as well. Before we can confirm and forward the report to the developers, we need update the description to reflect this additional information (As the current description may be misleading).
Germano Cavalcante added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-12-11 18:07:00 +01:00
Germano Cavalcante changed title from crashing when exporting image sequence via compositor to Crash with 'File Output' when exporting the 'Combined' output from this specific EXR image 2023-12-11 18:13:46 +01:00

Thanks for the update @mano-wii I've edited the description.

Thanks for the update @mano-wii I've edited the description.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-24 12:01:01 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115983
No description provided.